# AutoLatex

./: OCR_API_启动说明.md  README.md  README_OCR_DELIVERY.md  a  app.py  frontend_page.py  ocr_api.py  ocr_model_wrapper.py  pyproject.toml  requirements.txt
data/ex1/: ex1.docx  ex1_parsed.json
data/uploads/: sample_paper_full_parsed.json  英文版稿子红字方便对应找参考文献2_parsed.json
data/vector_db/: chroma.sqlite3
evaluation_results/: evaluation_results.csv
output/: final_report.md  generation_log.md
output/temp_source/: main.bib  main.tex  preamble.tex
output/temp_source/sec/: 0_abstract.tex  1_intro.tex  3_tasks.tex  3_tasks_datasets.tex  4_experiments.tex  4_experiments_results.tex  abstract.tex  conclusion.tex  evaluation_metrics.tex  exp_baseline.tex  exp_cross.tex  exp_crossdomain.tex  exp_finetuned.tex  exp_results.tex  exp_setup.tex  exp_visual.tex  experiments.tex  intro.tex  introduction.tex  keywords.tex  metrics.tex  related_works.tex  tasks_datasets.tex  tasks_metrics.tex  tasks_overview.tex  tasks_tiu.tex  tasks_tou.tex  tiu.tex  tiu_details.tex  tou.tex  tou_details.tex
scripts/: README_eval_model_comparison.md  find_dataset_cache.py  inspect_mixtex_modules.py
src/autolatex/: crew.py  main.py  model.py  web_ui.py
src/autolatex/api/: main.py
src/autolatex/config/: agents.yaml  tasks.yaml
src/autolatex/tools/: __init__.py  document_tools.py  knowledge_base.py  knowledge_tools.py  latex_tools.py  mixtex_ocr_tool.py
static/css/: styles.css
static/js/: script.js
templates/: index.html
tests/tools/: test_formula_extractor_manual.py
(+2 files in other folders)
